--- a/backend/Market_carbon/src/main/resources/messages.properties
+++ b/backend/Market_carbon/src/main/resources/messages.properties
@@ -17,3 +17,9 @@ vehicle.update.success= Vehicle update successfully
 vehicle.delete.success= Vehicle deleted successfully
 vehicle.not.found= Vehicle not found
 
+#Company Messages
+company.add.success= Company added successfully
+company.update.success= Company update successfully
+company.delete.success= Company deleted successfully
+company.not.found= Company not found
+company.exist= Company already exists
