Update delete listing

--- a/backend/Market_carbon/src/main/resources/messages.properties
+++ b/backend/Market_carbon/src/main/resources/messages.properties
@@ -1,7 +1,7 @@
 #User Messages
 user.add.success= User added successfully
 user.update.success= User update successfully
-user.not.found= User not found
+user.not.found= User not found. Please KYC before.
 
 
 #KYC Messages
@@ -21,5 +21,5 @@ vehicle.not.found= Vehicle not found
 company.add.success= Company added successfully
 company.update.success= Company update successfully
 company.delete.success= Company deleted successfully
-company.not.found= Company not found
+company.not.found= Company not found. Please KYC before.
 company.exist= Company already exists
